--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.17.0",
+    "eslint-plugin-react": "^7.22.0",
     "typescript": "~4.0.0"
   },
   "private": true
